# py-dj-mw

./: .gitignore  README.rst  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: django.yml  release.yml
dani-sql-tools/: middleware.py
tests/: settings.py  test_new.py
tests/demo_app/: models.py  urls.py  views.py
