[build-system]
requires = ["setuptools>=61.0.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dani-sql-tools"
version = "1.0.2"
description = "Django middleware for query stats."
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "Dani Academy", email="r3ap3rpy@gmail.com" },
]
dependencies = [
    "Pygments>=2.14.0","sqlparse>=0.4.3",
]

[tool.setuptools.packages.find]
include = ["dani-sql-tools"]

[project.urls]
Homepage = "https://github.com/r3ap3rpy/py-dj-mw"